# AetherMind

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: a4a6a119c607_phase3_schemas_and_db_layer.py
backend/app/: config.py  db.py  main.py
backend/app/agent/: depth.py  graph.py  state.py
backend/app/api/: feedback.py  jobs.py  memory.py  reports.py  research.py  router.py  transforms.py
backend/app/embeddings/: client.py
backend/app/eval/: __init__.py  fixtures.py  harness.py  judge.py  metrics.py  models.py  tracing.py
backend/app/guardrails/: __init__.py  citation_verifier.py  source_policy.py
backend/app/llm/: client.py  router.py
backend/app/memory/: __init__.py  service.py  sqlite_store.py  vector_store.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: __init__.py  (+1 more)
backend/tests/: conftest.py  test_agent_graph.py  test_agent_state.py  test_api_feedback.py  test_api_memory.py  test_api_reports.py  test_api_research.py  test_api_transforms.py  test_citation_verifier.py  test_critic_node.py  test_db_models.py  test_embeddings_client.py  test_eval_fixtures.py  test_eval_harness.py  test_eval_judge.py  test_eval_metrics.py  test_graph_cached_topic.py  test_llm_client.py  test_llm_router.py  test_memory_service.py  test_memory_writer_node.py  test_migrations.py  test_planner_depth.py  test_report_length.py  test_researcher_depth.py  test_schemas_models.py  test_source_policy.py  test_tools_stubs.py
(+144 files in other folders)
