[project]
name = "aethermind-backend"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "chromadb>=1.5.8",
    "fastapi[standard]>=0.136.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langgraph>=1.1.8",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "litellm>=1.83.10",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.26",
    "sentence-transformers>=5.4.1",
    "sqlalchemy>=2.0.49",
    "sse-starlette>=3.3.4",
    "structlog>=25.5.0",
    "tiktoken>=0.12.0",
    "uvicorn[standard]>=0.44.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.11",
]
